# BenchForge

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  contributors.md  docker-compose.yml  package-lock.json
backend/: Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: README  env.py
backend/alembic/versions/: 20260417_0001_create_prompt_library_tables.py  20260417_0002_create_model_profile_table.py  20260417_0003_create_session_tables.py  20260417_0004_create_run_snapshot_tables.py  20260417_0005_create_candidate_response_tables.py  20260417_0006_create_judging_tables.py  20260417_0007_create_model_global_summary_table.py  20260419_0008_create_api_key_preset_table.py  20260419_0009_add_api_key_preset_id_to_model_profile.py  20260419_0010_add_difficulty_to_prompt.py  20260420_0011_add_batch_type_to_judge_batch.py  20260422_0012_add_estimated_cost_to_judge_batch.py  20260428_0013_add_scenario_fields.py  20260501_0014_add_code_generation.py  20260502_0015_add_sample_index_to_candidate_response.py  (+2 more)
backend/app/: main.py
backend/generated_reports/: run-1.html  run-10.html  run-11.html  run-12.html  run-3.html  run-4.html  run-6.html  run-7.html  run-9.html
backend/scripts/: import_swe_bench.py
backend/tests/: test_aggregation_service.py  test_anthropic_adapter.py  test_api_key_presets_service.py  test_app.py  test_core.py  test_execution_service.py  test_judging_service.py  test_models_registry_service.py  test_prompts_service.py  test_reports_service.py  test_runs_service.py  test_sessions_service.py
docker/: README.md
(+196 files in other folders)
